--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             The bureaucracy through which the characters navigate is also somewhat reminiscent of <span style="color:red" >Franz Kafka's works.</span> 
         </p>
 
-        <img src="https://www.imdb.com/title/tt0887883/"
+        <img src="https://upload.wikimedia.org/wikipedia/fi/c/c0/Burn_After_Reading_2008_poster.jpg"
              alt="Burn After Reading Poster"
              title="Burn After Reading Poster">
         <h2>Main Character List</h2>
