--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
             The bureaucracy through which the characters navigate is also somewhat reminiscent of <span style="color:red" >Franz Kafka's works.</span> 
         </p>
 
-        <img src="https://upload.wikimedia.org/wikipedia/fi/c/c0/Burn_After_Reading_2008_poster.jpg"
+        <img src="https://cdn11.bigcommerce.com/s-yzgoj/images/stencil/1280x1280/products/2922461/5931847/MOVEI1362__12631.1679579338.jpg?c=2"
              alt="Burn After Reading Poster"
-             title="Burn After Reading Poster">
+             title="Burn After Reading Poster"
+             width="300"
+             />
         <h2>Main Character List</h2>
         <ul>
           <li>Harry Pfarrer</li>
@@ -87,7 +89,7 @@
                     <td colspan="2">Total (top)Cast: 77</td>
                 </tr>
             </tfoot>
-         </table>
+         </table> <br>
 
     </body>
 
