--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             The bureaucracy through which the characters navigate is also somewhat reminiscent of <span style="color:red" >Franz Kafka's works.</span> 
         </p>
 
-        <img src="https://cdn11.bigcommerce.com/s-yzgoj/images/stencil/1280x1280/products/2922461/5931847/MOVEI1362__12631.1679579338.jpg?c=2"
+        <img src="https://image.tmdb.org/t/p/original/eQfTetzb4DMoI4YnPEcNoUQD63U.jpg"
              alt="Burn After Reading Poster"
              title="Burn After Reading Poster"
              width="300"
