--- a/Väinö_Turunen_HTML_2/index.html
+++ b/Väinö_Turunen_HTML_2/index.html
@@ -25,6 +25,7 @@
     <body>
         <header>
             <h1 id="pagetitle">City Storage</h1>
+            <!--Page navigation-->
             <nav>
                 <a href="#application">Application Form</a>
                 <a href="#media">Media Section</a>
@@ -108,7 +109,7 @@
             </article>
         </section>
         <hr>
-
+        <!--Media section with image and video-->
         <section id="media">
             <article>
                 <h2>Media</h2>
@@ -130,7 +131,7 @@
             </article>
             
         </section>
-        
+        <!--Page bottom section-->
         <footer>
             <p>City Storage OY all right reserved</p>
         </footer>
