--- a/Väinö_Turunen_HTML_2/index.html
+++ b/Väinö_Turunen_HTML_2/index.html
@@ -90,7 +90,7 @@
                     </datalist>
                     <br><br>
 
-                    <label for="cv">Cover Letter:</label>
+                    <label for="cv">Cover Letter:</label><br>
                     <textarea id="cv" name="cv" rows="7" cols="40" placeholder="This is a CV"></textarea>
                     <br><br>
 
